--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,7 @@
 - clean: ['~']
 
 - link:
+    ~/local/bin/utils: utils
     ~/.tmux: .tmux
     ~/.tmux.conf: .tmux.conf
     ~/.tmux.conf.local: .tmux.conf.local
