--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,8 +8,7 @@
 
 - link:
     ~/local/bin/utils: utils
-    ~/.tmux: tmux
-    ~/.tmux.conf:    # defaults to basename without the leading . 
+    ~/.tmux.conf:    # defaults to basename without the leading  
     ~/.tmux.conf.local: 
 
     ~/.vim:
