--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -16,7 +16,8 @@
 
     ~/.zshrc:
     ~/.oh-my-zsh:
-    ~/.powerlevel10k:  
+    ~/.powerlevel10k:
+    ~/.p10k.zsh: 
 
 - create:
     - ~/Downloads
