--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -28,7 +28,7 @@
     - ~/.vim/undo-history
 
 - shell:
-  - command: chsh -s $(which zsh) || echo "Whoops, couldn't change to zsh default."
+  - command: bash -c 'chsh -s $(which zsh) $USER || echo "Whoops, could not change to zsh default. Try chsh -s $(which zsh) manually."'
     description: Make zsh default shell
   - command: bash -c 'if [ "$USER" == "root" ]; then (sed -r -i "/^.*PermitRootLogin.*$/d" /etc/ssh/sshd_config || true) && echo "PermitRootLogin prohibit-password" >> /etc/ssh/sshd_config; fi'
     description: Allow key-based login for root
