--- a/iterm2_pref/com.googlecode.iterm2.plist
+++ b/iterm2_pref/com.googlecode.iterm2.plist
@@ -819,7 +819,7 @@
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>SourceCodeProForPowerline-Regular 14</string>
+			<string>Menlo-Regular 11</string>
 			<key>Only The Default BG Color Uses Transparency</key>
 			<false/>
 			<key>Open Toolbelt</key>
